<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

<!--    <string name="app_name">Aratek BMAPI Demo</string>-->
    <string name="app_name">MySoft Heaven BMAPI</string>
    <string name="loading">Loading</string>
    <string name="preparing_device">Device is preparing, please wait…</string>
    <string name="closing_device">Device is closing, please wait…</string>

    <!-- Fingerprint Device -->
    <string name="fingerprint">Fingerprint</string>
    <string name="fps_sn">Fingerprint sensor serial number: <xliff:g>%1$s</xliff:g>.</string>
    <string name="fps_fw">Fingerprint sensor firmware version: <xliff:g>%1$s</xliff:g>.</string>
    <string name="fp_collect_info">Time Information: </string>
    <string name="fp_id">Fingerprint ID: </string>
    <string name="capture">Capture Image: </string>
    <string name="extract">Extract Feature: </string>
    <string name="generalize">Make Template: </string>
    <string name="verify">Authentication: </string>
    <string name="enroll_fp">Enroll</string>
    <string name="verify_fp">Verify</string>
    <string name="identify_fp">Identify</string>
    <string name="clear_fp_db">Clear Database</string>
    <string name="delete_fp">Delete Fingerprint</string>
    <string name="show_fp">Show Image</string>
    <string name="get_capacity">Get Capacity</string>
    <string name="get_enrolled_count">Get Count</string>
    <string name="get_enrolled_list">Get List</string>
    <string name="get_template_from_chip">Get Template</string>
    <string name="download_template_to_chip">Download Template</string>
    <string name="capture_iso_feature">Capture ISO</string>
    <string name="extract_iso_feature">Extract ISO</string>
    <string name="capture_feature">Capture Feature</string>
    <string name="extract_feature">Extract Feature</string>
    <string name="press_finger">Please press finger on capture area.</string>
    <string name="enrolling">Enrolling fingerprint to database…</string>
    <string name="verifying">Verifying fingerprint…</string>
    <string name="identifying">Identifying fingerprint…</string>
    <string name="fingerprint_device_open_success">Succeeded to open fingerprint device!</string>
    <string name="fingerprint_device_open_failed">Failed to open fingerprint device!</string>
    <string name="fingerprint_device_close_success">Succeeded to colse fingerprint device!</string>
    <string name="fingerprint_device_close_failed">Failed to colse fingerprint device!</string>
    <string name="fingerprint_device_power_on_failed">Failed to power on fingerprint device!</string>
    <string name="fingerprint_device_power_off_failed">Failed to power off fingerprint device!</string>
    <string name="algorithm_initialization_failed">Algorithm initialization failed!</string>
    <string name="algorithm_cleanup_failed">Algorithm anti-initialization failed!</string>
    <string name="not_done">Not applicable</string>
    <string name="capture_image_success">Succeeded to capture fingerprint image!</string>
    <string name="capture_image_failed">Failed to capture fingerprint image!</string>
    <string name="enroll_failed_because_of_extract_feature">Feature extracting failure!</string>
    <string name="enroll_failed_because_of_make_template">Enrollment failed because of template making failure!</string>
    <string name="enroll_failed_because_of_get_id">Enrollment failed because fingerprint database is full!</string>
    <string name="enroll_failed_because_of_error">Enrollment failed!</string>
    <string name="enroll_success">Enrollment succeeded!</string>
    <string name="enrolled_id">The enrolled fingerprint ID is <xliff:g>%1$d</xliff:g>.</string>
    <string name="verify_failed_because_of_extract_feature">Verification failed because of feature extracting failure!</string>
    <string name="verify_failed_because_of_error">Verification failed!</string>
    <string name="fingerprint_not_match">Fingerprint does not match!</string>
    <string name="fingerprint_match">Fingerprint match!</string>
    <string name="fingerprint_similarity">The similarity is <xliff:g>%1$d</xliff:g>.</string>
    <string name="identify_failed_because_of_extract_feature">Identification failed because of feature extracting failure!</string>
    <string name="identify_failed_because_of_error">Identification failed!</string>
    <string name="identify_match">Identification succeeded!</string>
    <string name="matched_id">The matched fingerprint ID is <xliff:g>%1$d</xliff:g>.</string>
    <string name="matched_id_score">The matched fingerprint ID is <xliff:g>%1$d</xliff:g>, score is <xliff:g>%2$d</xliff:g>.</string>
    <string name="clear_fingerprint_database_success">Succeeded to clear fingerprint database!</string>
    <string name="clear_fingerprint_database_failed">Failed to clear fingerprint database!</string>
    <string name="delete_fingerprint_success">Succeeded to delete fingerprint!</string>
    <string name="delete_fingerprint_failed">Failed to delete fingerprint!</string>
    <string name="get_capacity_success">Succeeded to get capacity!</string>
    <string name="get_capacity_failed">Failed to get capacity!</string>
    <string name="capacity">The capacity is <xliff:g>%1$d</xliff:g>.</string>
    <string name="get_enrolled_count_success">Succeeded to get enrolled count!</string>
    <string name="get_enrolled_count_failed">Failed to get enrolled count!</string>
    <string name="enrolled_count">The enrolled count is <xliff:g>%1$d</xliff:g>.</string>
    <string name="get_enrolled_list_success">Succeeded to get enrolled list!</string>
    <string name="get_enrolled_list_failed">Failed to get enrolled list!</string>
    <string name="get_feature_from_chip_success">Succeeded to get feature from chip!</string>
    <string name="get_feature_from_chip_failed">Failed to get feature from chip!</string>
    <string name="download_template_to_chip_success">Succeeded to download feature to chip!</string>
    <string name="download_template_to_chip_failed">Failed to download feature to chip!</string>
    <string name="get_template_first">Please get template from chip first!</string>
    <string name="finger_image_not_captured">Please capture a finger image first!</string>
    <string name="extract_feature_failed">Failed to extract feature!</string>
    <string name="extract_feature_success">Succeeded to extract feature!</string>

    <!-- Error Code Strings -->
    <string name="info_error">Error</string>
    <string name="operation_successful">Operation is successful!</string>
    <string name="error_operation_failed">Operation failed!</string>
    <string name="error_wrong_connection">Operation failed because of wrong connection!</string>
    <string name="error_device_busy">Operation failed because device is busy!</string>
    <string name="error_device_not_open">Operation failed because device is not open!</string>
    <string name="error_timeout">Operation failed because of timeout!</string>
    <string name="error_no_permission">Operation failed because of no permission!</string>
    <string name="error_wrong_parameter">Operation failed because of wrong parameter!</string>
    <string name="error_decode">Operation failed because of decoding failure!</string>
    <string name="error_initialization_failed">Operation failed because of initialization failure!</string>
    <string name="error_unknown">Operation failed because of unknown error!</string>
    <string name="error_not_support">Operation failed because it\'s not supported!</string>
    <string name="error_not_enough_memory">Operation failed because of insufficient memory!</string>
    <string name="error_device_not_found">Operation failed because device is not found!</string>
    <string name="error_device_reopen">Operation failed because device is repeatedly turned on!</string>
    <string name="error_algorithm_initialization_failed">Operation failed because of fingerprint algorithm initialization failure!</string>
    <string name="error_invalid_feature_data">Operation failed because of invalid fingerprint feature data!</string>
    <string name="error_bad_image">Operation failed because of unqualified fingerprint image!</string>
    <string name="error_not_match">Operation failed because fingerprint dose not match!</string>
    <string name="error_low_point">Operation failed because fingerprint verification score is too low!</string>
    <string name="error_no_finger">Operation failed because of no fingers found!</string>
    <string name="error_no_result">Operation failed because of no match fingerprint is found in database!</string>
    <string name="error_out_of_bound">Operation failed because fingerprint ID is out of range!</string>
    <string name="error_database_full">Operation failed because database is full!</string>
    <string name="error_library_missing">Operation failed because fingerprint algorithm library is missing!</string>
    <string name="error_algorithm_uninitialize">Operation failed because fingerprint algorithm is not initialized!</string>
    <string name="error_algorithm_reinitialize">Operation failed because of fingerprint algorithm is initialized repeatedly!</string>
    <string name="error_repeated_enroll">Operation failed because of fingerprint is enrolled repeatedly!</string>
    <string name="error_not_enrolled">Operation failed because fingerprint is not enrolled!</string>
    <string name="error_no_card">Operation failed because no card is found!</string>
    <string name="error_invalid_card">Operation failed because card is not supported!</string>
    <string name="error_invalid_decode_lib">Operation failed because decoding library is invalid!</string>
    <string name="error_card_validate_failed">Operation failed because of encryption key authentication failure!</string>
    <string name="error_card_not_activate">Operation failed because card is not activated!</string>
    <string name="error_no_paper">Paper has been exhausted!</string>
    <string name="error_number_format">Input number is invalid!</string>
    <string name="error_other">Error: <xliff:g>%1$d</xliff:g></string>

</resources>